@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-01-06T12:31:16Z",
+  "timestamp" : "2025-01-07T01:12:04Z",
   "count_outdated" : 2901,
   "uniques_outdated" : 933,
-  "count" : 2908,
-  "uniques" : 939,
+  "count" : 2909,
+  "uniques" : 940,
   "views" : [
     {
       "timestamp": "2024-12-24T00:00:00Z",
@@ -52,6 +52,15 @@
     },
     {
       "timestamp": "2025-01-02T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-01-06T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
